ran linters and formatting on newly added code
